fixed margins and wrap

--- a/css/style.css
+++ b/css/style.css
@@ -92,12 +92,12 @@ body {
   letter-spacing: 2px;
 }
 .section2 {
-  margin: 10px auto 0 auto;
-  height: 650px;
+  margin: 10px auto 0 auto;  
   display: flex;
   justify-content: space-between;
   color: white;
-  /* flex-wrap: wrap; */
+  flex-wrap: wrap;   
+ 
 }
 .sec2Item {
   flex: 1;
@@ -106,6 +106,7 @@ body {
   text-align: center;
   padding: 20px;
   font-size: 14px;
+  
 }
 
 .BackgroundPart {
@@ -140,8 +141,12 @@ body {
 /* ===MAIN=== */
 
 /*Husham's Part*/
+
+.section3 {
+ 
+}
 .h-circles {
-  margin: 1vw 3.4vw;
+  margin: 1vw auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -197,7 +202,7 @@ body {
 .readMore-container {
   display: flex;
   justify-content: space-evenly;
-  margin: 1vw 3.4vw;
+  margin: 1vw auto;
   flex-wrap: wrap;
 }
 
